fixed font changing on high contrast mode

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,6 @@
   }
 
   [data-theme="light"] {
-      font-family: Arial, sans-serif;
 		  background-color: #ffffff;
 		  color: #000000;
   }
